--- a/views/Log-Out.handlebars
+++ b/views/Log-Out.handlebars
@@ -8,9 +8,8 @@
         <a href="/login">Login</a>
       {{/if}}
     </div>
-    <div><h1>Your Dashboard</h1></div>
+    <div><h1>The Tech Blog</h1></div>
   </nav>
-  <main>
-    <footer><button type="button" class="btn btn-primary btn-lg">+ New Post</button></footer></main>
+  <main><footer><button type="button" class="btn btn-primary btn-lg">Log Out</button></footer></main>
 
 </body>
