--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -11,7 +11,7 @@
     <div><h1>The Tech Blog</h1></div>
   </nav>
   <main>
-    {{#each Data}}
+    {{!-- {{#each Data}}
       <div class="card">
 
         <div class="card-header">
@@ -26,7 +26,9 @@
         </div>
 
       </div>
+    {{/each}} --}}
+    {{#each data}}
+      <h1>{{this.User}}</h1>
     {{/each}}
-
   </main>
 </body>
