--- a/views/Login.handlebars
+++ b/views/Login.handlebars
@@ -1,15 +1,5 @@
-<body>
-  <nav>
-    <div><a href="/">Home</a><a href="/dashboard">Dashboard</a>
-      {{#if loggedIn}}
-        <a href="/Log-Out">Log Out</a>
-      {{else}}
-        <a href="/Log-Out">Log Out</a>
-        <a href="/login">Login</a>
-      {{/if}}
-    </div>
-    <div><h1>The Tech Blog</h1></div>
-  </nav>
+
+
   <main>
     <form>
       
@@ -37,8 +27,7 @@
       <div class="checkbox mb-3">
         <a href="/Sign-Up">Sign Up Instead</a>
       </div>
-      <button class="w-100 btn btn-lg btn-primary" type="submit">Log In</button>
+      <button class="w-100 btn btn-lg btn-primary" type="submit" id="log-in">Log In</button>
       <p class="mt-5 mb-3 text-muted">
     </form>
   </main>
-</body>
