--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,21 @@
   </head>
 
   <body>
+    <nav>
+      <div><a href="/">Home</a><a href="/dashboard">Dashboard</a>
+        {{#if loggedIn}}
+          <a href="/Log-Out">Log Out</a>
+        {{else}}
+          <a href="/Log-Out">Log Out</a>
+          <a href="/login">Login</a>
+        {{/if}}
+      </div>
+      <div><h1>The Tech Blog</h1></div>
+    </nav>
     {{{body}}}
-
+    <script>
+      console.log(loggedIn)
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
