continuing the backend

--- a/views/Log-Out.handlebars
+++ b/views/Log-Out.handlebars
@@ -1,1 +1,5 @@
-<main><footer><button type="button" class="btn btn-primary btn-lg">Log Out</button></footer></main>
+<main><footer><button
+      type="button"
+      class="btn btn-primary btn-lg"
+      id="log-out"
+    >Log Out</button></footer></main>
