--- a/views/SignUp.handlebars
+++ b/views/SignUp.handlebars
@@ -8,25 +8,25 @@
         <input
           type="Username"
           class="form-control"
-          id="floatingInput"
+          id="floatingInputSign"
           placeholder="Username"
         />
-        <label for="floatingInput">Username</label>
+        <label for="floatingInputSign">Username</label>
       </div>
       <div class="form-floating" style="margin-bottom: 15px">
         <input
           type="password"
           class="form-control"
-          id="floatingPassword"
+          id="floatingPasswordSign"
           placeholder="Password"
         />
-        <label for="floatingPassword">Password</label>
+        <label for="floatingPasswordSign">Password</label>
       </div>
 
       <div class="checkbox mb-3">
         <a href="/Login">Log In Instead</a>
       </div>
-      <button class="w-100 btn btn-lg btn-primary" type="submit" id="sign-up">Sign Up!</button>
+      <button class="w-100 btn btn-lg btn-primary" type="button" id="sign-up">Sign Up!</button>
       <p class="mt-5 mb-3 text-muted">
     </form>
   </main>
