--- a/views/Login.handlebars
+++ b/views/Login.handlebars
@@ -27,7 +27,7 @@
       <div class="checkbox mb-3">
         <a href="/Sign-Up">Sign Up Instead</a>
       </div>
-      <button class="w-100 btn btn-lg btn-primary" type="submit" id="log-in">Log In</button>
+      <button class="w-100 btn btn-lg btn-primary" type="button" id="log-in">Log In</button>
       <p class="mt-5 mb-3 text-muted">
     </form>
-  </main>
+   </main>
