--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -30,7 +30,7 @@
           </div>
           <div class="modal-body">
             <div class="mb-3">
-              <label class="form-label">Title</label>
+              <label class="form-label" id="modal-input">Title</label>
               <input class="form-control" />
             </div>
             <div class="mb-3">
@@ -51,7 +51,11 @@
               class="btn btn-secondary"
               data-bs-dismiss="modal"
             >Close</button>
-            <button type="button" class="btn btn-primary">Create</button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              id="modal-button"
+            >Create</button>
           </div>
         </div>
       </div>
