--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -31,7 +31,7 @@
           <div class="modal-body">
             <div class="mb-3">
               <label class="form-label" id="modal-input">Title</label>
-              <input class="form-control" />
+              <input class="form-control" id="real-modal-input" />
             </div>
             <div class="mb-3">
               <label
